New in master
=============

Features
--------

* The ``utils.config_changed`` function now takes an optional extra
  argument, ``identifier``, used to identify the source of a specific
  dependency save.  As such, ALL your files will be rebuilt after
  upgrading. (Issue #1526 via #1521)
* New option GALLERY_FOLDERS replacing GALLERY_PATH (Issue #1511)
* New PANDOC_OPTIONS option (Issue #1492)
* New tab-width option in code-block directive (Issue #1514)
* New option TAG_PAGES_DESCRIPTIONS for optionally making individual
  tag pages more unique and interesting (Issue #1486)
* New option LISTINGS_FOLDERS (which replaces LISTINGS_FOLDER) which
  allows to separate input and output folder names for listings, and
  allows to have more than one listings folder (Issue #1499)
* ReST listing directive now honors alternative listings folder names
  (Issue #1499)
* New command line option --conf= to specify the configuration file
  (default is conf.py) (Issue #1501)
* Added Arabic translation (by darkwise)
* Added Danish translation (by mikkelkristiansen)
* Added Indonesian translation (by Willy Sudiarto Raharjo)
* Added Korean translation (by Dong Geun)
* Added Serbian translation (by Ivan Radeljic)
* Added Swedish translation (by Johan Sommerfeld)
* New advanced option RSS_LINKS_APPEND_QUERY for tracking traffic
  from RSS subscribers
* Add `robots` meta tag with value `noindex` for drafts (Issue #1489)
* New option TAGLIST_MINIMUM_POSTS allows hiding unpopular tags from
  the tag index page (Issue #1484)
* New options CREATE_FULL_ARCHIVES and CREATE_DAILY_ARCHIVE which allow
  to create non-hierarchical archives and archives for days, respectively
  (Issue #1494)
* New plugin for creating image thumbnails, and a corresponding reST
  plugin (Issue #1527)

Bugfixes
--------

* Respect SHOW_UNTRANSLATED_POSTS = False in archives
  and for untranslated source files (Issue #1360)
* Make sure drafts don’t appear in sitemaps with multiple languages
  (Issue #1489)